<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.ArticleListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/articleList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/toFavourites"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:textColor="@color/black"
        android:background="@drawable/my_button_bg"
        android:text="saved articles"
        app:layout_constraintStart_toEndOf="@id/randomButton"
        app:layout_constraintTop_toBottomOf="@id/articleList" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/randomButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@drawable/my_button_bg"
        android:text="get articles"
        app:layout_constraintTop_toBottomOf="@id/articleList"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>