<resources>
    <string name="app_name">WikiMVVM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hyperlink"></string>
    <string name="toast_string">c1 añadido a favoritos</string>
</resources>