<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:background="@drawable/fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context=".views.FavouriteArticlesFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favouriteArticlesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backToMenuButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@drawable/my_button_bg"
        app:layout_constraintTop_toBottomOf="@id/favouriteArticlesRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/emptyListButton"
        android:text="back"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/emptyListButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@drawable/my_button_bg"
        app:layout_constraintTop_toBottomOf="@id/backToMenuButton"
        app:layout_constraintStart_toEndOf="@id/backToMenuButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Empty List" />

</LinearLayout>
</ScrollView>