<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardview"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="50dp"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/ivItemImage"
        android:layout_width="50dp"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:clickable="true"
        android:textSize="20sp"
        android:layout_marginLeft="75dp"
        tools:text="Titulo del articulo"
        android:focusable="true" />
    
</androidx.cardview.widget.CardView>